# maliput-rs

./: .clippy.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.devcontainer/: README.md
.devcontainer/rust-zen/: Dockerfile  devcontainer.json  zen.bashrc
.github/: copilot-instructions.md
.github/workflows/: build.yaml  build_macos.yaml  containers.yml  docs.yaml
docs/: plugin_architecture.md
maliput/: Cargo.toml  README.md  build.rs
maliput-sdk/: .bazelignore  .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs
maliput-sdk/src/: lib.rs  main.rs  maliput_malidrive_plugin_path.rs
maliput-sys/: Cargo.toml  README.md  build.rs
maliput-sys/examples/: create_rn.rs
maliput-sys/src/: api.rs  lib.rs  plugin.rs
maliput-sys/src/api/: api.h  mod.rs
maliput-sys/src/api/objects/: mod.rs  objects.cc  objects.h
maliput-sys/src/api/rules/: aliases.h  mod.rs  rules.cc  rules.h
maliput-sys/src/common/: common.h  mod.rs
maliput-sys/src/cxx_utils/: error_handling.h
maliput-sys/src/math/: math.h  mod.rs
maliput-sys/src/plugin/: mod.rs  plugin.h
maliput-sys/src/utility/: mod.rs  utility.h
maliput-sys/tests/: api_tests.rs  common_tests.rs  math_test.rs  plugin_tests.rs  utility_tests.rs
maliput-viz/: Cargo.toml
maliput-viz/examples/: minimal_rerun.rs
maliput-viz/src/: main.rs
maliput/benches/backend_custom_command/: main.rs
maliput/benches/to_lane_position/: main.rs
maliput/benches/to_lane_position_geopackage/: main.rs
maliput/benches/to_road_position/: main.rs
maliput/benches/to_road_position_geopackage/: main.rs
maliput/data/traffic_control_device_db/: TrafficControlDeviceDatabase.yaml
maliput/data/traffic_signal_db/: TrafficSignalDatabase.yaml
maliput/data/xodr/: ArcLane-IllFormed.xodr  RoadWithRoadObjects.xodr  RoadWithTrafficSigns.xodr  StraightRoadMultiLineRoadMark.xodr  TwoWayRoadWithDoubleYellowCurve.xodr
maliput/examples/: 01_road_geometry.rs  02_backend_custom_command.rs  03_maliput_malidrive_resources.rs  04_math.rs  05_multi_road_geometry.rs  06_road_rulebook.rs  07_error_handling.rs  08_direction_usage_rule.rs  09_phase_ring.rs  10_lane_boundary.rs  11_lane_boundary_complex_marking.rs  12_geopackage_road_geometry.rs  13_load_traffic_signal_database.rs  14_road_object.rs  15_traffic_sign.rs  api.rs  road_geometry.rs
maliput/src/: lib.rs
maliput/src/api/: mod.rs
maliput/src/api/objects/: mod.rs
maliput/src/api/rules/: mod.rs
maliput/src/common/: mod.rs
maliput/src/math/: mod.rs
maliput/src/utility/: mod.rs
maliput/tests/: branch_point_tests.rs  discrete_value_rule_test.rs  examples_test.rs  intersection_book_test.rs  intersection_tests.rs  intesection_tests.rs  is_intersection_test.rs  junction_tests.rs  lane_boundary_test.rs  lane_marking_test.rs  lane_test.rs  maliput_query_test.rs  obj_file_description_test.rs  phase_ring_book_test.rs  range_value_rule_test.rs  road_geometry_test.rs  road_marking_tests.rs  road_network_test.rs  road_object_tests.rs  road_rulebook_test.rs  rule_registry_test.rs  rule_type_tests.rs  segment_test.rs  state_provider_test.rs  traffic_light_tests.rs  traffic_sign_tests.rs
maliput/tests/common/: mod.rs
maliput/tests/data/traffic_control_device_db/: TrafficControlDeviceDatabase.yaml
maliput/tests/data/traffic_signal_db/: TrafficSignalDatabase.yaml
maliput/tests/data/xodr/: IllFormed.xodr  RoadWithUpperLeftTrafficLight.xodr
tools/: reformat_code.sh
