[workspace]
resolver = "2"
members = ["maliput", "maliput-sdk", "maliput-sys"]

[workspace.package]
edition = "2021"
keywords = ["maliput"]
license = "BSD-3-Clause"
repository = "https://github.com/maliput/maliput-rs"

[workspace.dependencies]
cxx = { version = "1.0.78"}
cxx-build = { version = "1.0.78"}
clap = { version = "~4.3" }

maliput-sdk = { version = "0.3", path = "maliput-sdk" }
maliput-sys = { version = "0.3", path = "maliput-sys" }
