[workspace]
resolver = "2"
members = ["maliput", "maliput-sdk", "maliput-sys"]

[workspace.package]
edition = "2021"
keywords = ["maliput"]
license = "BSD-3-Clause"
repository = "https://github.com/maliput/maliput-rs"

[workspace.dependencies]
cxx = { version = "1.0.187" }
cxx-build = { version = "1.0.187" }
clap = { version = "~4.3" }
strum = { version = "0.27" }
strum_macros = { version = "0.27" }
thiserror = { version = "1.0" }

maliput-sdk = { version = "0.11", path = "maliput-sdk" }
maliput-sys = { version = "0.12", path = "maliput-sys" }
