###############################################################################
# Loaders
###############################################################################


###############################################################################
# Libraries
###############################################################################

cc_binary(
    name = "maliput_sdk",
    visibility = ["//visibility:public"],
    deps = [
        "@maliput//:api",
        "@maliput//:base",
        "@maliput//:common",
        "@maliput//:drake",
        "@maliput//:math",
        "@maliput//:geometry_base",
        "@maliput//:plugin",
        "@maliput//:utility",
    ],
    linkshared = True,
    linkstatic = True,
)

# Dummy lib to force maliput_malidrive to be downloaded from BCR.
cc_library(
    name = "maliput_malidrive_dummy",
    visibility = ["//visibility:private"],
    deps = [
        "@maliput_malidrive//:maliput_plugins/libmaliput_malidrive_road_network.so",
    ],
    data = [
        "@maliput_malidrive//resources:all"
    ],
    linkstatic = False
)
