###############################################################################
# Loaders
###############################################################################


###############################################################################
# Libraries
###############################################################################

# Import the pre-built shared library
cc_import(
    name = "malidrive_plugin",
    # Path to the .so file relative to this BUILD file
    shared_library = "@maliput_malidrive//:maliput_plugins/libmaliput_malidrive_road_network.so",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "maliput_sdk",
    visibility = ["//visibility:public"],
    deps = [
        "@maliput//:api",
        "@maliput//:base",
        "@maliput//:common",
        "@maliput//:drake",
        "@maliput//:math",
        "@maliput//:geometry_base",
        "@maliput//:plugin",
        "@maliput//:utility",
        ":malidrive_plugin",
    ],
    linkshared = True,
    linkstatic = True,
)

# Dummy binary to force maliput_malidrive to be downloaded from BCR.
cc_binary(
    name = "maliput_malidrive_dummy",
    visibility = ["//visibility:public"],
    deps = [
        "@maliput_malidrive//:maliput_plugins/libmaliput_malidrive_road_network.so",
    ],
    data = [
        "@maliput_malidrive//resources:all"
    ],
    linkshared = True,
    linkstatic = False
)
