[package]
name = "maliput-sdk"
version = "0.1.1"
authors = ["Franco Cipollone <franco.c@ekumenlabs.com>"]
categories = ["external-ffi-bindings", "simulation"]
description = "Vendor for maliput libraries."
documentation = "https://maliput.readthedocs.io/"
readme = "README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

build = "build.rs"
# Dummy `links` value so that we can pass DEP_* environment variables to our
# dependents.
# See: https://github.com/rust-lang/cargo/issues/7846
links = "maliput-sdk"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]

[[bin]]
name = "maliput_malidrive_plugin_path"
path = "src/maliput_malidrive_plugin_path.rs"
