"""
Maliput SDK!
"""

module(
    name = "maliput_sdk",
    compatibility_level = 1,
    version = "0.30.0",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "maliput", version = "1.21.0")
bazel_dep(name = "maliput_malidrive", version = "0.28.0")
bazel_dep(name = "maliput_geopackage", version = "0.6.0")

# Uncomment if you want to use a local version instead of the one from the registry.
# local_path_override(module_name = "maliput_malidrive", path = "/workspaces/maliput/maliput_malidrive")
# local_path_override(module_name = "maliput", path = "/workspaces/maliput/maliput")
