[package]
name = "maliput-sys"
version = "0.1.3"
authors = ["Franco Cipollone <franco.c@ekumenlabs.com>"]
categories = ["external-ffi-bindings", "simulation"]
description = "FFI Rust bindings for maliput"
documentation = "https://maliput.github.io/maliput-rs/maliput_sys"
readme = "README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

build = "build.rs"

[dependencies]
cxx = "1.0.78"
maliput-sdk = { workspace = true }

[build-dependencies]
cxx-build = "1.0.78"
