[package]
name = "maliput-sys"
version = "0.19.0"
authors = [
  "Franco Cipollone <franco.c@ekumenlabs.com>",
  "Santiago Lopez <santiago.lopez@ekumenlabs.com>",
]
categories = ["external-ffi-bindings", "simulation"]
description = "FFI Rust bindings for maliput"
documentation = "https://maliput.github.io/maliput-rs/maliput_sys"
readme = "README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

build = "build.rs"

[features]
default = ["maliput_malidrive"]
all = ["maliput_malidrive", "maliput_geopackage"]
maliput_malidrive = ["maliput-sdk/maliput_malidrive"]
maliput_geopackage = ["maliput-sdk/maliput_geopackage"]

[dependencies]
cxx = { workspace = true }
maliput-sdk = { workspace = true }

[build-dependencies]
cxx-build = { workspace = true }
