[package]
name = "maliput"
version = "0.19.1"
authors = [
  "Franco Cipollone <franco.c@ekumenlabs.com>",
  "Santiago Lopez <santiago.lopez@ekumenlabs.com>",
]
categories = ["simulation"]
description = "Rust API for maliput"
documentation = "https://maliput.github.io/maliput-rs/maliput"
readme = "README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

build = "build.rs"
# Dummy `links` value so that we can pass DEP_* environment variables to our
# dependents.
# See: https://github.com/rust-lang/cargo/issues/7846
links = "maliput"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
cxx = { workspace = true }
maliput-sdk = { workspace = true }
maliput-sys = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bin]]
name = "maliput_query"
path = "bin/maliput_query.rs"

[[bench]]
name = "to_road_position"
harness = false

[[bench]]
name = "backend_custom_command"
harness = false
