[package]
name = "maliput"
version = "0.25.0"
authors = [
  "Franco Cipollone <franco.c@ekumenlabs.com>",
  "Santiago Lopez <santiago.lopez@ekumenlabs.com>",
]
categories = ["simulation"]
description = "Rust API for maliput"
documentation = "https://maliput.github.io/maliput-rs/maliput"
readme = "README.md"

edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

build = "build.rs"
# Dummy `links` value so that we can pass DEP_* environment variables to our
# dependents.
# See: https://github.com/rust-lang/cargo/issues/7846
links = "maliput"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["maliput_malidrive"]
all = ["maliput_malidrive", "maliput_geopackage"]
maliput_malidrive = ["maliput-sys/maliput_malidrive", "maliput-sdk/maliput_malidrive"]
maliput_geopackage = ["maliput-sys/maliput_geopackage", "maliput-sdk/maliput_geopackage"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
crossterm = { version = "0.28", optional = true }
cxx = { workspace = true }
maliput-sdk = { workspace = true }
maliput-sys = { workspace = true }
ratatui = { version = "0.29", optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
regex = "1.10"
criterion = { version = "0.4", features = ["html_reports"] }

[[bin]]
name = "maliput_query"
path = "bin/maliput_query.rs"
required-features = ["tui"]

[[bench]]
name = "to_road_position"
harness = false

[[bench]]
name = "to_lane_position"
harness = false

[[bench]]
name = "backend_custom_command"
harness = false

[[bench]]
name = "to_road_position_geopackage"
harness = false

[[bench]]
name = "to_lane_position_geopackage"
harness = false
